decreased menu items paddings to prevent overflow in some cases

--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -88,7 +88,7 @@ p a{
     text-align: left;
     color: #4E59A4;
     line-height: 30px;
-    padding: 0 7px 0 7px;
+    padding: 0 6px 0 6px;
     font-weight: normal;
 }
 
@@ -291,7 +291,7 @@ p a{
 .nav-pills > li > a {
     margin-top: 0;
     margin-bottom: 0;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 7px;
     margin-right: 0;
     border-radius: 0;
     border-right: 1px #7C7C7F solid;
